--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==3.2.9"
 python-decouple = "==3.5"
 psycopg2-binary = "==2.9.2"
+django-allauth = "==0.46.0"
 
 [dev-packages]
 
