--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ django = "==3.2.9"
 python-decouple = "==3.5"
 psycopg2-binary = "==2.9.2"
 django-allauth = "==0.46.0"
+django-crispy-forms = "==1.13.0"
+crispy-bootstrap5 = "==0.6"
 
 [dev-packages]
 
