--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ psycopg2-binary = "==2.9.2"
 django-allauth = "==0.46.0"
 django-crispy-forms = "==1.13.0"
 crispy-bootstrap5 = "==0.6"
+pygments = "==2.10.0"
 
 [dev-packages]
 black = "*"
