--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-allauth = "==0.46.0"
 django-crispy-forms = "==1.13.0"
 crispy-bootstrap5 = "==0.6"
 pygments = "==2.10.0"
+celery = "==5.2.1"
 
 [dev-packages]
 black = "*"
