--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-crispy-forms = "==1.13.0"
 crispy-bootstrap5 = "==0.6"
 pygments = "==2.10.0"
 celery = "==5.2.1"
+django-celery-beat = "*"
 
 [dev-packages]
 black = "*"
