--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ crispy-bootstrap5 = "==0.6"
 pygments = "==2.10.0"
 celery = "==5.2.1"
 django-celery-beat = "*"
+gunicorn = "*"
 
 [dev-packages]
 black = "*"
